todo-project/backend/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project
  template:
    metadata:
      labels:
        app: todo-project
    spec:
      containers:
        - name: main
          image: 3nd3r1/todo-project-backend:latest
          ports:
            - containerPort: 8080
